--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
-version: '3.8'
-
+version: "3.8"
 services:
-  markitdown:
-    image: evolutta/markitdown-api:1.0
-    build: .
-    ports:
-      - "8001:8000"
+  markitdown_mcp:
+    image: evolutta/markitdown-mcp:1.0
+    hostname: "{{.Service.Name}}.{{.Task.Slot}}"
+    command: --sse --host 0.0.0.0 --port 3001
     networks:
       - network_swarm_public
     deploy:
+      mode: replicated
       replicas: 1
-      restart_policy:
-        condition: on-failure
       placement:
         constraints:
           - node.role == manager
-
 networks:
   network_swarm_public:
+    name: network_swarm_public
     external: true
